images folder created with icons added to it

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     
 
+<div class="card">
+    <div class="search">
+        <input type="text" placeholder="enter city name" spellcheck="false">
+        <button><img src="" alt=""></button>
+    </div>
+</div>
 
-
-    <script></script>
+    <!-- <script></script> -->
 </body>
 </html>
