--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MD Weather App</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-    
 
-<div class="card">
-    <div class="search">
-        <input type="text" placeholder="enter city name" spellcheck="false">
-        <button><img src="" alt=""></button>
-    </div>
-</div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>MD Weather App</title>
+        <link rel="stylesheet" href="./styles.css">
+    </head>
 
-    <!-- <script></script> -->
-</body>
+    <body>
+
+
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="enter city name" spellcheck="false">
+                <button><img src="./images/search.png" alt=""></button>
+            </div>
+
+            <div class="weather">
+                <img src="./images/rain.png" class="weather-icon">
+                <h1 class="temp">25°C</h1>
+                <h2 class="city">Dakar</h2>
+                <div class="details">
+                    <div class="col">
+                        <img src="/images/humidity.png" alt="">
+                        <div>
+                            <p class="humidity">50%</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="/images/windy.png" alt="">
+                        <div>
+                            <p class="wind">20 km/h%</p>
+                            <p>Wind Speed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <script></script> -->
+    </body>
+
 </html>
