--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="weather">
-                <img src="./images/rain.png" class="weather-icon">
+                <img src="./images/clear.png" class="weather-icon">
                 <h1 class="temp">25°C</h1>
                 <h2 class="city">Dakar</h2>
                 <div class="details">
@@ -32,7 +32,7 @@
                     <div class="col">
                         <img src="/images/windy.png" alt="">
                         <div>
-                            <p class="wind">20 km/h%</p>
+                            <p class="wind">20 km/h</p>
                             <p>Wind Speed</p>
                         </div>
                     </div>
