--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="weather">
-                <img src="./images/clear.png" class="weather-icon">
+                <img src="./images/cloudy.png" class="weather-icon">
                 <h1 class="temp">25°C</h1>
                 <h2 class="city">Dakar</h2>
                 <div class="details">
