API key generated and added to script with API URL

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
                 </div>
             </div>
         </div>
-        <!-- <script></script> -->
+
+        <script>
+
+const apiKey = "e7898dccf3b46bbe0dc9223bf376fa98";
+const apiURL = "https://api.openweathermap.org/data/2.5/weather?q=paris&appid=&units=metric";
+
+
+        </script>
+
     </body>
 
 </html>
