--- a/index.html
+++ b/index.html
@@ -42,9 +42,22 @@
 
         <script>
 
-const apiKey = "e7898dccf3b46bbe0dc9223bf376fa98";
-const apiURL = "https://api.openweathermap.org/data/2.5/weather?q=paris&appid=&units=metric";
+            const apiKey = "e7898dccf3b46bbe0dc9223bf376fa98";
+            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=dakar";
 
+            async function checkWeather() {
+                const response = await fetch(apiUrl + `&appid=${apiKey}`);
+                var data = await response.json();
+
+                console.log(data);
+
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = data.main.temp;
+                document.querySelector(".humidity").innerHTML = data.main.humidity;
+                document.querySelector(".wind").innerHTML = data.wind.speed;
+            }
+
+            checkWeather();
 
         </script>
 
