--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
             const searchBox = document.querySelector(".search input");
             const searchBtn = document.querySelector(".search button");
+            const weatherIcon = document.querySelector(".weather-icon");
 
             async function checkWeather(city) {
                 const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
@@ -58,13 +59,25 @@
                 document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
                 document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
                 document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
-            }
 
-            searchBtn.addEventListener("click", ()=>{
+            if(data.weather[0].main == "Clouds"){
+                weatherIcon.src = "./images/cloudy.png";
+            } else if (data.weather[0].main == "Clear") {
+                weatherIcon.src = "./images/clear.png"
+            } else if (data.weather[0].main == "Drizzle") {
+                weatherIcon.src = "./images/drizzle.png"
+            } else if (data.weather[0].main == "Mist") {
+                weatherIcon.src = "./images/mist.png"
+            } else if (data.weather[0].main == "Snow") {
+                weatherIcon.src = "./images/snow.png"
+            } else if (data.weather[0].main == "Rain") {
+                weatherIcon.src = "./images/rain.png"
+            }
+        }
+
+            searchBtn.addEventListener("click", () => {
                 checkWeather(searchBox.value);
             });
-
-           
         </script>
 
     </body>
